Refactor ObservableStream concept and minor tweaks